--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.3.0",
+    "react-toastify": "^9.0.8",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
