--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/material": "^5.10.3",
     "@mui/x-data-grid": "^5.17.1",
     "react": "^18.2.0",
+    "react-awesome-loaders": "^0.1.37",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
