--- a/package.json
+++ b/package.json
@@ -1,5 +1,11 @@
 {
   "name": "sarkaar",
+  "eslintConfig": {
+    "env": {
+      "browser": true,
+      "node": true
+    }
+  },
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,19 +17,32 @@
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@hookform/resolvers": "^2.9.7",
+    "@mui/icons-material": "^5.10.3",
+    "@mui/lab": "^5.0.0-alpha.98",
     "@mui/material": "^5.10.3",
     "@mui/x-data-grid": "^5.17.1",
+    "@mui/x-date-pickers": "^5.0.1",
+    "axios": "^0.27.2",
+    "dotenv": "^16.0.2",
+    "framer-motion": "^7.3.2",
+    "notistack": "^2.0.5",
     "react": "^18.2.0",
     "react-awesome-loaders": "^0.1.37",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.35.0",
     "react-icons": "^4.4.0",
+    "react-phone-number-input": "^3.2.11",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.3.0",
+    "react-scripts": "^5.0.1",
     "react-toastify": "^9.0.8",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@iconify/react": "^4.0.0",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@types/react-router-bootstrap": "^0.24.5",
