--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "react": "^18.2.0",
     "react-awesome-loaders": "^0.1.37",
     "react-bootstrap": "^2.5.0",
+    "react-code-input": "^3.10.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.35.0",
     "react-icons": "^4.4.0",
+    "react-odometerjs": "^2.1.2",
     "react-phone-number-input": "^3.2.11",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.3.0",
