--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@mui/material": "^5.10.3",
     "@mui/x-data-grid": "^5.17.1",
     "@mui/x-date-pickers": "^5.0.1",
+    "@reduxjs/toolkit": "^1.8.5",
     "axios": "^0.27.2",
     "dotenv": "^16.0.2",
     "framer-motion": "^7.3.2",
@@ -36,10 +37,12 @@
     "react-icons": "^4.4.0",
     "react-odometerjs": "^2.1.2",
     "react-phone-number-input": "^3.2.11",
+    "react-redux": "^8.0.4",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "react-toastify": "^9.0.8",
+    "redux-persist": "^6.0.0",
     "styled-components": "^5.3.5",
     "yup": "^0.32.11"
   },
