--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
+    "react-to-print": "^2.14.7",
     "react-toastify": "^9.0.8",
     "redux-persist": "^6.0.0",
     "styled-components": "^5.3.5",
