--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-icons": "^4.4.0",
     "react-odometerjs": "^2.1.2",
     "react-phone-number-input": "^3.2.11",
+    "react-pincode": "^1.1.3",
     "react-redux": "^8.0.4",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.3.0",
